submit homework inclass week 2

--- a/week2/InClass/ex2.1/index.html
+++ b/week2/InClass/ex2.1/index.html
@@ -9,14 +9,20 @@
 </head>
 
 <body>
-    <div>1</div>
+    <div>1 and 3</div>
     <input placeholder="Enter some text" name="name" />
     <p id="log"></p>
-    <div>2</div>
+    <div>4</div>
     <form action="" method="get" id="calculateAge">
         <input type="date" id="date">
         <button id="btnCalculateAge">submit</button>
     </form>
+    <div id="age"></div>
+    <div>5</div>
+    <a href="#"class="bold-hover">click me</a></a>
+    <!-- <div id="box">abc</div> -->
+    <div>6</div>
+    <div id="size"></div>
 </body>
 <script src="./assets/js/index.js"></script>
 
