--- a/week2/Homework/ex2/index.html
+++ b/week2/Homework/ex2/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8" />
   <title>Drum Kit</title>
   <link rel="stylesheet" href="styles.css" />
-  <link 
-        href="https://fonts.googleapis.com/css?family=Arvo" 
-        rel="stylesheet" 
-        />
+  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" />
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
   <script defer src="index.js"></script>
 </head>
 
 <body>
   <h1 id="title">Drum 🥁 Kit</h1>
+  <div class="set">
+    <button class="c2 drum">2</button>
+    <button class="c3 drum">3</button>
+    <button class="c4 drum">4</button>
+    <button class="c5 drum">5</button>
+  </div>
   <div class="set">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
@@ -31,4 +35,5 @@
 
   </footer>
 </body>
+
 </html>
